[package]
name = "password-strength-checker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sts10/password-strength-checker"
authors = ["sts10 <sschlinkert@gmail.com>"]
license = "BlueOak-1.0.0"

[dependencies]
zxcvbn = "2.2.2"
rpassword = "7.2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
